[package]
name = "Otis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies.rocket_contrib]
version = "0.4.11" # Not a good idea to use * as version
features = ["handlebars_templates"]
