[package]
name = "Otis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inline-python = "0.12.0"
lazy_static = "1.4.0"
pyo3 = "0.19.0"
rocket = "0.4.10"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.192"

[dependencies.rocket_contrib]
version = "0.4.11" # Not a good idea to use * as version
features = ["handlebars_templates"]

[development]
assets_dir = "static/"

[production]
assets_dir = "static/"
