[package]
name = "otis_rust_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = "1.16.3"
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.192", features = ["derive"] }
rocket = { version = "=0.5.0-rc.4", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "=0.1.0-rc.4", features = ["handlebars"] }
stable-inline-python = "0.1.0"
